# mandelbrot

./: .gitignore  .~lock.mandelbrot.png#  Cargo.toml  asdf.html
.cargo/: config.toml
src/: main.rs
