[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.9"
num = "0.4.3"
rayon = "1.11.0"

[profile.release]
opt-level=3
debug = 0
codegen-units=1
lto="fat"
incremental=false
panic="abort"

